riak patch 生成riak 配置文件,安装时候替换, zookeeper patch 生成zookeeperproperty